{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 31,
  "lineage": "d234d21a-7118-3da6-717c-7ef927983e6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ec84b284795cbc7",
            "arn": "arn:aws:ec2:eu-west-2:381492185231:instance/i-037e931ade9ff1def",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037e931ade9ff1def",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Server1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee897afb63fa892a",
            "private_dns": "ip-10-0-1-195.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-3-8-237-14.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.237.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0078a8b16c8f34175",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3298a1d54bd0388",
            "tags": {
              "Name": "infra-instance"
            },
            "tags_all": {
              "Name": "infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-048262e41c60ad729"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.infra_subnet",
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:381492185231:internet-gateway/igw-00522bee624b24d02",
            "id": "igw-00522bee624b24d02",
            "owner_id": "381492185231",
            "tags": {
              "Name": "infra_igw"
            },
            "tags_all": {
              "Name": "infra_igw"
            },
            "vpc_id": "vpc-0e4c17acfc9a5f696"
          },
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "infra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:381492185231:route-table/rtb-0aafaf3b9496155be",
            "id": "rtb-0aafaf3b9496155be",
            "owner_id": "381492185231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00522bee624b24d02",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra_route_table"
            },
            "tags_all": {
              "Name": "infra_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4c17acfc9a5f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.infra_igw",
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "infra_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb39ca7b40dce7b9",
            "route_table_id": "rtb-0aafaf3b9496155be",
            "subnet_id": "subnet-0c3298a1d54bd0388"
          },
          "dependencies": [
            "aws_internet_gateway.infra_igw",
            "aws_route_table.infra_route_table",
            "aws_subnet.infra_subnet",
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:381492185231:security-group/sg-048262e41c60ad729",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048262e41c60ad729",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240920141853219700000001",
            "name_prefix": "terraform-",
            "owner_id": "381492185231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4c17acfc9a5f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "infra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:381492185231:subnet/subnet-0c3298a1d54bd0388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3298a1d54bd0388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492185231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra_subnet"
            },
            "tags_all": {
              "Name": "infra_subnet"
            },
            "vpc_id": "vpc-0e4c17acfc9a5f696"
          },
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:381492185231:vpc/vpc-0e4c17acfc9a5f696",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0571e39fb97d4d17c",
            "default_route_table_id": "rtb-01cd413a3f883ea9f",
            "default_security_group_id": "sg-0ef2980fa466e6d68",
            "dhcp_options_id": "dopt-06989bc2efddd89e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4c17acfc9a5f696",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01cd413a3f883ea9f",
            "owner_id": "381492185231",
            "tags": {
              "Name": "infra_vpc"
            },
            "tags_all": {
              "Name": "infra_vpc"
            }
          }
        }
      ]
    }
  ]
}